@@ -2,6 +2,8 @@
 
   [Jörg Frings-Fürst]
   * Add favicon.ico.
+  * New Report_log_partX.php (2017-038).
+
 
 
 2.25.13
